# turbo-repo-llm-sample

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  melos.yaml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.ai/: README.md
.ai/rules/: flutter.md  global.md  microservices.md  nextjs.md  python-fastapi.md
.cursor/rules/: flutter.mdc  nextjs.mdc  project.mdc  python-fastapi.mdc
.github/: copilot-instructions.md
.github/agents/: scaffold-flutter-feature.agent.md  scaffold-package.agent.md  scaffold-service.agent.md
.github/instructions/: flutter.instructions.md  microservices-conventions.instructions.md  nextjs.instructions.md  python-fastapi.instructions.md
.github/workflows/: ci-ai-sync.yml  ci-mobile.yml  ci-services.yml  ci-web.yml
apps/: AGENTS.md
apps/mobile/: analysis_options.yaml  pubspec.yaml
apps/mobile/lib/app/: app.dart  (+2 more)
apps/web/: next.config.ts  package.json  tsconfig.json
services/: AGENTS.md
services/api-gateway/: .env.example  Dockerfile  pyproject.toml
services/api-gateway/app/: main.py
services/api-gateway/tests/: conftest.py  test_health.py
services/auth-service/: .env.example  Dockerfile  pyproject.toml
services/llm-service/: .env.example  Dockerfile  pyproject.toml
services/llm-service/app/api/v1/: router.py
services/llm-service/app/core/: config.py
services/notifications-service/: .env.example  Dockerfile  pyproject.toml
services/users-service/: .env.example  Dockerfile  pyproject.toml
tools/scripts/: sync-ai-context.sh
(+14 files in other folders)
